<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Operativa</string>
    <string name="app_name_short">Operativa</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_input_model">Input Model Activity</string>
    <string name="hello_world">Hello world!</string>
    <string name="calculate">Calcular</string>
    <string name="title_activity_results">ResultsActivity</string>

    <!-- Queuing Theory -->

    <string name="queuing_theory">Queuing Theory</string>

    <string name="tasa_de_llegadas">Arrival rate</string>
    <string name="tasa_de_servicio">Service rate</string>
    <string name="numero_de_canales_de_servicio">Number of service channels</string>
    <string name="tamano_de_la_poblacion">Population size</string>
    <string name="limite_del_sistema">System limit</string>

    <string name="daniel_alvarez">Daniel Alvarez</string>


    <string name="numero_esperado_unidades">Expected number of units</string>

    <string name="en_sistema">In system</string>
    <string name="en_cola">In the queue</string>
    <string name="estaciones_ocupadas">stations occupied</string>
    <string name="estaciones_desocupadas">Unoccupied stations</string>

    <string name="tiempo_medio_espera">Average waiting time</string>


    <string name="probabilidades">PROBABILITIES</string>
    <string name="encontrar_sistema_ocupado">Find the system busy</string>
    <string name="sistema_vacio_oscioso">Find the vacuum system or oscioso</string>

    <string name="encontrar_">Find&#160;</string>
    <string name="_unidad_en_sistema">&#160;unit in the system</string>
    <string name="_unidades_en_sistema">&#160;units in the system</string>

    <!-- Inventories -->

    <string name="inventories">Inventarios</string>

    <!-- Converter -->

    <string name="converter">Conversor</string>

    <!-- Configuration -->

    <string name="configuration">Configuración</string>

    <!-- Credits -->

    <string name="credits">Credits</string>
    <string name="requested">Required</string>
    <string name="tasa_media_filtraje">Average rate of filtration</string>
    <string name="information">Information</string>
    <string name="github">GitHub</string>
    <string name="credits_content">\"Operativa\" is an open project that aims to cover all models of Queuing Theory, Inventory, and other unit converter in Operations Research. In order to increase and improve the product functions to give me know your interest, suggestions and thus collaborate in development.</string>
    <string name="enviame_correo">Send Mail</string>
    <string name="seguir_twitter">Follow on Twitter</string>
    <string name="proyecto_github">Project on GitHub</string>
    <string name="ir_web">Visit website</string>
    <string name="mi_web">alvarez.tech</string>

    <!--Errores-->

    <string name="error_limit_system">The system boundary is too large for the calculation.</string>
    <string name="error_calculating">Failed to calculate.</string>
    <string name="error_service_channels">The number of service channels is very high.</string>
    <string name="error_population_size">The population size is very large.</string>

    <!--Results-->

    <string name="results">Results</string>

    <!--Models-->

    <string name="models">MODELS</string>
    <string name="mm1_desc">Population infinite, infinite capacity system, a service channel</string>
    <string name="mms_desc">Population infinite, infinite capacity system S service channels</string>
    <string name="mm1c_desc">Population size C, the infinite capacity system, a service channel</string>
    <string name="mmsc_desc">Population size C, the infinite capacity system S service channels</string>
    <string name="mm1k_desc">Infinite population, limited system capacity K, a channel service</string>
    <string name="mmsk_desc">Infinite population, limited system capacity K, S service channels</string>
    <string name="single_formula">$\\int_0^\\infty e^{-x^5} dx=\\frac{\\sqrt{\\pi}}{2}$</string>

    <string name="lambda">$\\lambda$</string>
    <string name="mu">$\\mu$</string>

    <string name="settings_decimals_title">Number of decimals</string>
    <string name="settings_decimals_key" translatable="false">settings_decimals</string>
    <string name="settings_decimals_default" translatable="false">2</string>

    <string name="settings_probabilities_decimals_default" translatable="false">4</string>
    <string name="settings_probabilities_decimals_key" translatable="false">settings_probabilities_decimals</string>
    <string name="settings_probabilities_decimals_title">Probabilities number of decimals</string>

</resources>
