<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/circle"
            android:padding="4dp"
            android:src="@drawable/lamda" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tasa_de_llegadas" />

        <EditText
            android:gravity="end"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:id="@+id/tasaLlegadasEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/circle"
            android:padding="4dp"
            android:src="@drawable/mu" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tasa_de_servicio" />

        <EditText
            android:gravity="end"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:id="@+id/tasaServicioEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/circle"
            android:padding="4dp"
            android:src="@drawable/s" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numero_de_canales_de_servicio" />

        <EditText
            android:gravity="end"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:id="@+id/canalesServicioEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/circle"
            android:padding="4dp"
            android:src="@drawable/k" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/limite_del_sistema" />

        <EditText
            android:gravity="end"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:id="@+id/limiteSistemaEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </LinearLayout>

</LinearLayout>